# managercode

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  adjacency-matrix.js  calculate-shared-git-contributions.py  clone-org.sh  contributions.js  contributors-cli.js  contributors.html  force-graph.js  git-contributors-generation.py  graphData.js  graphData.json  index.html  index.html.template  line_counts_by_type.py  package-lock.json  package.json  pr_commenters.rb  pyproject.toml  render.sh  shellHelper.js  slack-browser.js  visualize_git_commits_over_time.py
cloneorg/: clone.sh
drive/: Gemfile  app.rb
fine-tune-anything/: filter_items.sh  main.py  pyproject.toml
git/: all_commenters_from_prs.rb  contributors.rb
git-contributors/: contributors-cli.js  contributors.html  package-lock.json  package.json
git-contributors-generation-ruby/: Gemfile  contributors.rb
repo-groups/: app.py  pyproject.toml
slack-activity/: Gemfile  contributors.html  conversations-cli.js  conversations-cli.rb  index.html
slarchive-from-browser/: .gitignore  README.md  app.py  axolotl_config.yaml  export_training_data.py  exporter.py  importer.py  pyproject.toml  query.py
