[project]
name = "fine-tune-anything"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.8.1",
    "bitsandbytes>=0.46.0",
    "datasets>=3.6.0",
    "huggingface-hub>=0.33.0",
    "peft>=0.15.2",
    "tiktoken>=0.9.0",
    "transformers>=4.52.4",
]
