[project]
name = "slarchive-from-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "ipython>=8.36.0",
    "numpy>=2.0.1",
    "requests>=2.32.3",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]
